- Reverted "+ (Core) Fixed overlapping blocks when using the 'wizard' style. (Fixes #4949)"
This reverts commit 3c2e5d943081fdc260c56b8b0039180d355d8f6e.

--- a/RockWeb/Themes/Rock/Styles/theme.less
+++ b/RockWeb/Themes/Rock/Styles/theme.less
@@ -673,10 +673,10 @@ textarea,
 }
 
 .wizard {
-  margin: 0 0 35px;
+  margin: -5px -15px 35px;
 
   @media (min-width: @screen-md-min) {
-    margin: 0 0 35px;
+    margin: -35px -35px 35px;
   }
 }
 
